Fixed overflow issue in sidebar

--- a/wcfsetup/install/files/style/layout.less
+++ b/wcfsetup/install/files/style/layout.less
@@ -140,13 +140,13 @@
 			margin-bottom: -1px;
 			
 			> a {
+				border-bottom: 1px solid @wcfContainerBorderColor;
 				color: @wcfMainMenuColor;
 				display: inline-block;
 				padding: 11px 35px;
 				font-weight: bold;
 				
 				&:hover {
-					border-bottom: 1px solid @wcfContainerBorderColor;
 					background-color: @wcfMainMenuHoverBackgroundColor;
 					text-decoration: none;
 				}
@@ -997,7 +997,6 @@ ul.dataList {
 	fieldset {
 		padding: @wcfGapSmall @wcfGapMedium @wcfGapMedium;
 		margin-top: 0;
-		width: 300px - @wcfGapMedium * 2;
 		
 		> legend {
 			border-width: 0;
@@ -1034,7 +1033,7 @@ ul.dataList {
 			float: right;
 		}
 		
-		nav {
+		> nav {
 			margin: 0 -@wcfGapMedium 0;
 			
 			ul {
@@ -1064,6 +1063,9 @@ ul.dataList {
 			}
 		}
 		
+		> div {
+			width: 300px - @wcfGapMedium * 2;
+		}
 	}
 	
 	.sidebarBoxList > li:not(:last-child) {
